# Intro-RAG

./: README.md  main.py  pyproject.toml  requirements.txt
data/text_files/: Gen_AI.txt  RAG_intro.txt
notebook/: RAG.ipynb  document.ipynb
